--- a/index.html
+++ b/index.html
@@ -5,6 +5,14 @@
 
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Learn the most frequent 1000 words in French, German, and Spanish with Vocabulary Flashcards. Boost your language skills and master essential vocabulary with ease.">
+    <meta name="keywords" content="Vocabulary, Flashcards, Learn French, Learn German, Learn Spanish, Language Learning, Frequent Words">
+    <!-- Open Graph tags for social media sharing -->
+    <meta property="og:title" content="Vocabulary Flashcards - Learn French, German, and Spanish">
+    <meta property="og:description" content="Master the most frequent 100 words in French, German, and Spanish. Boost your language proficiency with Vocabulary Flashcards.">
+    <meta property="og:image" content="https://www.vocabflash.com/images/vocab-flash.png"> <!-- Replace URL_TO_YOUR_IMAGE with the link to a representative image for your website, if available -->
+    <meta property="og:url" content="https://www.vocabflash.com"> <!-- Replace YOUR_WEBSITE_URL with the link to your website -->
+    
     <title>Vocabulary Flashcards</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="icon" href="images/favicon.png" type="image/png">
@@ -37,8 +45,6 @@
         Your browser does not support the audio element.
       </audio>
       
-
-
       <div class="select-container">
         I want to practice
         <select id="language-select">
@@ -51,3 +57,4 @@
     <div class="reset-button"><a href="/" id="reset-button">Start again</a></div>
 
 </body>
+</html>
