--- a/index.html
+++ b/index.html
@@ -30,6 +30,9 @@
 </head>
 <body>
 
+
+    <img class="homepage-image" src="/images/vocab-flash.png">
+
 <div id="exampleSentences"></div>
 
 <span id="wordDisplay"><span id="startButton">Start</span></span>
@@ -57,7 +60,7 @@
       </audio>
       
       <div class="select-container">
-        I want to practice
+        I want to learn
         <select id="language-select">
             <option value="fr">French</option>
             <option value="de">German</option>
