--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     
     <title>Vocabulary Flashcards</title>
     <link rel="stylesheet" href="styles.css">
-    <link rel="icon" href="/images/favicon.png" type="image/png">
+    <link rel="icon" href="/images/vocab-flash.png" type="image/png">
 </head>
 <body>
 
