--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
       </audio>
       
       <div class="select-container">
-        I want to learn
+        I'm learning
         <select id="language-select">
             <option value="fr">French</option>
             <option value="de">German</option>
