--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
 <div id="exampleSentences"></div>
 
-<span id="wordDisplay"><span id="startButton">Start</span></span>
+<span id="wordDisplay"><span id="startButton">Begin</span></span>
     <div id="sliderContainer">
         <span id="sliderLabel">Randomize from top <span class="sliderInitialRange">1000</span> words</span>
         <input type="range" id="wordRange" min="50" max="1000" value="750" step="50">
@@ -43,7 +43,7 @@
     </div>
     <div id="rankDisplay"></div>
     <br>
-    <div id="translation">Begin</div>
+    <div id="translation"></div>
     <script src="spanishWords.js"></script>
     <script src="frenchWords.js"></script>
     <script src="germanWords.js"></script>
